# blahbarian-reborn

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: rust.yml
assets/: Sprite-0003.aseprite  all.aseprite  nail.aseprite  shark-test.aseprite  shark.aseprite  shark_bk.aseprite  table.aseprite
src/: app.rs  main.rs  main.ts  physics.rs  style.css  weapon.rs
src copy/: main.ts
src copy/assets/level/: level-background.json  pot-1.json  sand-tile.aseprite
src copy/assets/plants/: seagrass.aseprite
src copy/engine/: Animation.ts  SpriteSheet.ts
src copy/game/: Asset.ts  Camera.ts  Constants.ts  Game.ts
src copy/game/entity/: Entity.ts
src copy/game/scene/: BattlefieldScene.ts  Scene.ts
src/assets/entities/: shark.aseprite
src/assets/level/: level-background.aseprite  pot-1.aseprite  pot-1.ts  sand-tile.json  sand-tile.ts
src/assets/plants/: seagrass.json  seagrass.ts
src/enemy/: mod.rs  systems.rs
src/engine/: Camera.ts  Entity.ts  Game.ts  Player.ts  Renderer.ts  Vector.ts  World.ts
src/game/: animated.rs  camera.rs  enemy.rs  health.rs  mod.rs  physics.rs  player.rs  projectile.rs  weapon.rs
src/game/enemy/: components.rs  mod.rs  systems.rs
src/game/health/: mod.rs  systems.rs
src/game/physics/: components.rs  mod.rs  systems.rs
src/game/player/: components.rs  mod.rs  systems.rs
src/game/projectile/: components.rs  mod.rs  (+1 more)
src/health/: components.rs  mod.rs  systems.rs
src/physics/: mod.rs
src/player/: components.rs  mod.rs  systems.rs
src/projectile/: mod.rs  systems.rs
(+2 files in other folders)
