[package]
name = "blahbarian-reborn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.3"
bevy_aseprite = "0.11.0"
bevy_ecs_tilemap = "0.11.1"
bevy_health_bar3d = "1.4.4"
bevy_prng = { version = "0.1.0", features = ["rand_chacha"] }
bevy_rand = "0.3.0"
bevy_turborand = "0.6.0"
rand_core = "0.6.4"
thiserror = "1.0.49"
